server_error.log

> arabic-academy@1.0.0 dev:server
> ts-node --project server/tsconfig.json server/index.ts

C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
server/config.ts(51,5): error TS2561: Object literal may only specify known properties, but 'minimumAvailableOutgoingBitrate' does not exist in type 'WebRtcTransportOptionsBase<AppData> & { listenIps: (string | TransportListenIp)[]; port?: number | undefined; listenInfos?: undefined; } & { ...; }'. Did you mean to write 'initialAvailableOutgoingBitrate'?

    at createTSError (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\LENOVO\.gemini\antigravity\scratch\arabic-academy\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2561 ]
}
